syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name, title, subtitle, and URLs.
message HelloRequest {
  string name = 1;
  string title = 2;
  string subtitle = 3;
  repeated string urls = 4;
}

// The response message containing the greeting message.
message HelloReply {
  string message = 1;
}
